mobile/tablet navigation done

--- a/public/assets/sass/base/_breakpoints.scss
+++ b/public/assets/sass/base/_breakpoints.scss
@@ -1,9 +1,10 @@
+
 $grid-columns: 6;
 
-$bp-phoneish:        32rem;
-$bp-tabletish:       50rem;
-$bp-tabletopish:     76rem;
-$bp-laptopish:       90rem;
+$bp-phoneish:        0px;
+$bp-tabletish:       500px;
+$bp-tabletopish:     768px;
+$bp-laptopish:       900px;
 
 
 
