--- a/public/assets/sass/base/_colors.scss
+++ b/public/assets/sass/base/_colors.scss
@@ -4,6 +4,7 @@ $color-list: (
   c-red #ef4036,
   c-white #fff,
   c-gray #8c8c8c,
+  c-gray-light #999,
   c-gray-medium #343434,
   c-gray-dark #646464,
   c-black #000,
