--- a/public/assets/sass/plugins/traffic-light.scss
+++ b/public/assets/sass/plugins/traffic-light.scss
@@ -1,8 +1,8 @@
 $breakpoints: (
-  "phoneish" 32rem,
-  "tabletish"  50rem,
-  "tabletopish" 76rem,
-  "laptopish"  90rem
+  "phoneish" 320px,
+  "tabletish"  500px,
+  "tabletopish" 768px,
+  "laptopish"  900px
 );
 
 
