--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -2173,7 +2173,7 @@ th {
   /* line 23, bourbon/addons/_clearfix.scss */
   .oc:after, .header__block:after {
     clear: both; }
-  @media screen and (min-width: 76rem) {
+  @media screen and (min-width: 768px) {
     /* line 1, base/_grid.sass */
     .oc, .header__block {
       padding: 0 45rem; } }
@@ -2188,9 +2188,17 @@ th {
   .c:last-child {
     margin-right: 0; }
 
+/* line 19, base/_grid.sass */
+.header__logo {
+  margin-bottom: 0.5rem; }
+
 /* line 23, base/_grid.sass */
-.site-logo, .header__logo {
-  margin-top: 2.5rem; }
+.header__logo {
+  margin-top: 0.5rem; }
+
+/* line 23, base/_grid.sass */
+label[role="menu-toggle"] i {
+  margin-top: 0.9rem; }
 
 /* line 1, base/is/_is__text.sass */
 .is__text--heavy {
@@ -2226,7 +2234,7 @@ th {
   text-align: left; }
 
 /* line 26, base/is/_is__text.sass */
-.is__text--right {
+.is__text--right, label[role="menu-toggle"] i {
   text-align: right; }
 
 /* line 29, base/is/_is__text.sass */
@@ -2254,7 +2262,7 @@ th {
   float: left; }
 
 /* line 16, base/is/_is__this.sass */
-.is__this--floating--right {
+.is__this--floating--right, label[role="menu-toggle"] {
   float: right; }
 
 /* line 19, base/is/_is__this.sass */
@@ -2311,6 +2319,18 @@ th {
   border-color: #8c8c8c; }
 
 /* line 5, base/is/_is__colors.sass */
+.is__text--c-gray-light, label[role="menu-toggle"] i {
+  color: #999999; }
+
+/* line 9, base/is/_is__colors.sass */
+.is__background--c-gray-light {
+  background: #999999; }
+
+/* line 12, base/is/_is__colors.sass */
+.is__border--c-gray-light, label[role="menu-toggle"] i {
+  border-color: #999999; }
+
+/* line 5, base/is/_is__colors.sass */
 .is__text--c-gray-medium {
   color: #343434; }
 
@@ -2339,7 +2359,7 @@ th {
   color: black; }
 
 /* line 9, base/is/_is__colors.sass */
-.is__background--c-black {
+.is__background--c-black, .block__breadcrumbs {
   background: black; }
 
 /* line 12, base/is/_is__colors.sass */
@@ -2460,7 +2480,7 @@ a {
   background: url("../img/site-logo.svg") center no-repeat;
   background-size: contain; }
 
-/* line 6, ui/_header.sass */
+/* line 10, ui/_header.sass */
 .header__logo-box {
   float: left;
   display: block;
@@ -2469,8 +2489,8 @@ a {
   /* line 40, neat/grid/_span-columns.scss */
   .header__logo-box:last-child {
     margin-right: 0; }
-  @media screen and (min-width: 76rem) {
-    /* line 6, ui/_header.sass */
+  @media screen and (min-width: 768px) {
+    /* line 10, ui/_header.sass */
     .header__logo-box {
       float: left;
       display: block;
@@ -2480,12 +2500,33 @@ a {
       .header__logo-box:last-child {
         margin-right: 0; } }
 
-/* line 11, ui/_header.sass */
-.header__logo {
-  width: 15rem;
-  height: 15rem; }
-
 /* line 16, ui/_header.sass */
+.header__logo {
+  width: 6rem;
+  height: 6rem; }
+  @media screen and (min-width: 768px) {
+    /* line 16, ui/_header.sass */
+    .header__logo {
+      width: 9rem;
+      height: 9rem;
+      -webkit-transform: translateY(1.5rem);
+      -moz-transform: translateY(1.5rem);
+      -ms-transform: translateY(1.5rem);
+      -o-transform: translateY(1.5rem);
+      transform: translateY(1.5rem);
+      margin: 0; } }
+  @media screen and (min-width: 900px) {
+    /* line 16, ui/_header.sass */
+    .header__logo {
+      width: 15rem;
+      height: 15rem;
+      -webkit-transform: translateY(2.5rem);
+      -moz-transform: translateY(2.5rem);
+      -ms-transform: translateY(2.5rem);
+      -o-transform: translateY(2.5rem);
+      transform: translateY(2.5rem); } }
+
+/* line 34, ui/_header.sass */
 .hader__nav {
   float: left;
   display: block;
@@ -2495,13 +2536,80 @@ a {
   .hader__nav:last-child {
     margin-right: 0; }
 
-/* line 20, ui/_header.sass */
-ul[role="menu"] {
+/* line 39, ui/_header.sass */
+#header__toggle {
   display: none; }
 
-/* line 25, ui/_header.sass */
-#header__toggle:checked ~ ul[role="menu"] {
+@media screen and (min-width: 768px) {
+  /* line 43, ui/_header.sass */
+  label[role="menu-toggle"] {
+    display: none; } }
+/* line 49, ui/_header.sass */
+label[role="menu-toggle"] i {
+  padding: 0.8rem 1rem;
+  border-width: 0.2rem;
+  border-style: solid; }
+
+/* line 62, ui/_header.sass */
+nav[role="menu"] {
+  display: none; }
+  @media screen and (min-width: 768px) {
+    /* line 62, ui/_header.sass */
+    nav[role="menu"] {
+      display: block; } }
+
+/* line 70, ui/_header.sass */
+#header__toggle:checked ~ nav[role="menu"] {
   display: block; }
+
+/* line 73, ui/_header.sass */
+nav {
+  float: left;
+  display: block;
+  margin-right: 4.82916%;
+  width: 65.05695%; }
+  /* line 40, neat/grid/_span-columns.scss */
+  nav:last-child {
+    margin-right: 0; }
+  /* line 75, ui/_header.sass */
+  nav .nav__menu {
+    *zoom: 1;
+    display: block; }
+    /* line 17, bourbon/addons/_clearfix.scss */
+    nav .nav__menu:before, nav .nav__menu:after {
+      content: " ";
+      display: table; }
+    /* line 23, bourbon/addons/_clearfix.scss */
+    nav .nav__menu:after {
+      clear: both; }
+  /* line 78, ui/_header.sass */
+  nav .nav__list {
+    float: left;
+    display: block;
+    margin-right: 4.82916%;
+    width: 100%;
+    font-size: 2rem; }
+    /* line 40, neat/grid/_span-columns.scss */
+    nav .nav__list:last-child {
+      margin-right: 0; }
+    @media screen and (min-width: 768px) {
+      /* line 78, ui/_header.sass */
+      nav .nav__list {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 23.23176%; }
+        /* line 40, neat/grid/_span-columns.scss */
+        nav .nav__list:last-child {
+          margin-right: 0; } }
+
+/* line 84, ui/_header.sass */
+.header__social {
+  position: absolute; }
+
+/* line 1, ui/_breadcrumbs.sass */
+.block__breadcrumbs {
+  height: 10rem; }
 
 /* line 9, plugins/traffic-light.scss */
 .traffic-light {
@@ -2525,19 +2633,19 @@ ul[role="menu"] {
     font-family: "Helvetica Neue", "Helvetica", sans-serif;
     text-transform: uppercase;
     box-shadow: 0px 1px 0px #8c8c8c, 0px 2px 0px #8c8c8c, 0px 3px 0px #8c8c8c, 0px 4px 0px #8c8c8c, 0px 5px 0px #8c8c8c; }
-    @media only screen and (min-width: 32rem) {
+    @media only screen and (min-width: 320px) {
       /* line 13, plugins/traffic-light.scss */
       .traffic-light:after {
         content: "phoneish"; } }
-    @media only screen and (min-width: 50rem) {
+    @media only screen and (min-width: 500px) {
       /* line 13, plugins/traffic-light.scss */
       .traffic-light:after {
         content: "tabletish"; } }
-    @media only screen and (min-width: 76rem) {
+    @media only screen and (min-width: 768px) {
       /* line 13, plugins/traffic-light.scss */
       .traffic-light:after {
         content: "tabletopish"; } }
-    @media only screen and (min-width: 90rem) {
+    @media only screen and (min-width: 900px) {
       /* line 13, plugins/traffic-light.scss */
       .traffic-light:after {
         content: "laptopish"; } }
@@ -2554,19 +2662,19 @@ ul[role="menu"] {
   font-size: .6rem;
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
   text-transform: uppercase; }
-  @media only screen and (min-width: 32rem) {
+  @media only screen and (min-width: 320px) {
     /* line 52, plugins/traffic-light.scss */
     #wp-admin-bar-site-name a:after:after {
       content: "phoneish"; } }
-  @media only screen and (min-width: 50rem) {
+  @media only screen and (min-width: 500px) {
     /* line 52, plugins/traffic-light.scss */
     #wp-admin-bar-site-name a:after:after {
       content: "tabletish"; } }
-  @media only screen and (min-width: 76rem) {
+  @media only screen and (min-width: 768px) {
     /* line 52, plugins/traffic-light.scss */
     #wp-admin-bar-site-name a:after:after {
       content: "tabletopish"; } }
-  @media only screen and (min-width: 90rem) {
+  @media only screen and (min-width: 900px) {
     /* line 52, plugins/traffic-light.scss */
     #wp-admin-bar-site-name a:after:after {
       content: "laptopish"; } }
