--- a/craft/templates/_layout--main.html
+++ b/craft/templates/_layout--main.html
@@ -23,6 +23,7 @@
         {% include 'partials/_breadcrumb' %}
         {% block content %}
         {% endblock %}
+        {% include 'partials/_footer' %}
         {% include 'partials/_scripts' %}
     </body>
 </html>
