--- a/public/assets/sass/style.sass
+++ b/public/assets/sass/style.sass
@@ -23,5 +23,6 @@
 @import "ui/site-wide"
 @import "ui/header"
 @import "ui/breadcrumbs"
+@import "ui/footer"
 //PLUGINS
 @import "plugins/traffic-light"
