--- a/public/assets/sass/ui/_breadcrumbs.sass
+++ b/public/assets/sass/ui/_breadcrumbs.sass
@@ -1,3 +1,10 @@
 .block__breadcrumbs
-  height: 10rem
   @extend .is__background--c-black
+
+.breadcrumbs__box
+  +oc
+  height: 10rem
+
+.breadcrumbs__title
+  @extend .is__text--light
+  margin-top: 1.7em
