--- a/craft/templates/partials/_breadcrumb.html
+++ b/craft/templates/partials/_breadcrumb.html
@@ -1,3 +1,5 @@
 <div class="block__breadcrumbs">
-  Frames >
+  <div class="breadcrumbs__box">
+    <h1 class="breadcrumbs__title" role="page title">Frames</h1>
+  </div>
 </div>
