--- a/public/assets/sass/base/_breakpoints.scss
+++ b/public/assets/sass/base/_breakpoints.scss
@@ -9,6 +9,7 @@ $bp-laptopish:       900px;
 
 
 $phoneish:    new-breakpoint(min-width $bp-phoneish 6);
+$mobileish:   new-breakpoint(min-width $bp-phoneish max-width $bp-tabletopish 6);
 $tabletish:   new-breakpoint(min-width $bp-tabletish 6);
 $tabletopish: new-breakpoint(min-width $bp-tabletopish 12);
 $laptopish:   new-breakpoint(min-width $bp-laptopish 12);
