--- a/public/assets/sass/base/_colors.scss
+++ b/public/assets/sass/base/_colors.scss
@@ -7,8 +7,11 @@ $color-list: (
   c-gray-light #999,
   c-gray-medium #343434,
   c-gray-dark #646464,
-  c-black #000,
+  c-gray-darkest #444444,
+  c-black #0d0d0d,
   c-twitter rgb(120,205,240),
   c-facebook rgb(83,123,189),
-  c-linkedin rgb(32,133,199)
+  c-linkedin rgb(32,133,199),
+  c-pinterest rgb(203,32,39),
+  c-instagram rgb(156,99,76)
   )
