--- a/craft/templates/partials/_footer.html
+++ b/craft/templates/partials/_footer.html
@@ -28,11 +28,11 @@
 
     <div class="footer__location-box">
       <ul class="footer__location">
-        <li><span class="is__text--c-gray-lightt">The Optical Shoppe</span></li>
-        <li>7641 Jefferson Highway</li>
-        <li>Baton Rouge, LA 7080</li>
-        <li>225-928-5798 <span class="is__text--c-gray-darkest">phone</span></li>
-        <li>225-926-2808 <span class="is__text--c-gray-darkest">fax</span></li>
+        <li><span class="is__text--c-gray-lightt">{{ companyInfo.storeName }}</span></li>
+        <li>{{ companyInfo.addressFirstLine }}</li>
+        <li>{{ companyInfo.addressSecondLine }}</li>
+        <li>{{ companyInfo.phoneNumber }}<span class="is__text--c-gray-darkest">phone</span></li>
+        <li>{{ companyInfo.faxNumber }}<span class="is__text--c-gray-darkest">fax</span></li>
       </ul>
     </div>
 
