--- a/public/assets/sass/base/_colors.scss
+++ b/public/assets/sass/base/_colors.scss
@@ -5,6 +5,7 @@ $color-list: (
   c-white #fff,
   c-gray #8c8c8c,
   c-gray-light #999,
+  c-gray-lighter #eaeaea,
   c-gray-medium #343434,
   c-gray-dark #646464,
   c-gray-darkest #444444,
