--- a/public/assets/sass/base/_type--appearance.sass
+++ b/public/assets/sass/base/_type--appearance.sass
@@ -13,7 +13,7 @@ html,body
 
 //CATEGORY --- Paragraph & Baseline fonts
 p
-  @extend .is__text--regular
+  @extend .is__text--light
 
 small
   font-size: .7rem
