--- a/public/assets/sass/style.sass
+++ b/public/assets/sass/style.sass
@@ -18,11 +18,17 @@
 @import "base/type--appearance"
 
 //COMPONENTS
+@import "components/contact"
+@import "components/promo"
+@import "components/panel"
 
 //UI
 @import "ui/site-wide"
 @import "ui/header"
 @import "ui/breadcrumbs"
 @import "ui/footer"
+@import "ui/aside"
+@import "ui/main"
+
 //PLUGINS
 @import "plugins/traffic-light"
