--- a/public/assets/sass/base/_type--sizing.sass
+++ b/public/assets/sass/base/_type--sizing.sass
@@ -23,7 +23,7 @@ h1,h2,h3,h4,h5,h6
   line-height: 1.3em
 
 $h1-font-size: 3rem
-$heading-ratio: $h1-font-size
+$heading-ratio: $h1-font-size + 1rem
 
 h1
   font-size: $h1-font-size
